syntax = "proto3";

option go_package = "./pb";

package pb;
enum CallbackCommand {
  None = 0;
  BeforeSendSingleMsg = 1;
  AfterSendSingleMsg = 2;
  BeforeSendGroupMsg = 3;
  AfterSendGroupMsg = 4;
}
message CommonCallbackReq {
  string SendID = 1;
  CallbackCommand CallbackCommand = 2;
  string ServerMsgID = 3;
  string ClientMsgID = 4;
  int32 ConversationType = 5;
  int32 ContentType = 6;
  int64 CreateTime = 7;
  bytes Content = 8;
}
enum ActionCode {
  Forbidden = 0;
}
enum ErrCode {
  HandleSuccess = 0;
  HandleFailed = 1;
}
message CommonCallbackResp {
  ActionCode ActionCode = 1;
  ErrCode ErrCode = 2;
  string ErrMsg = 3;
}

message CallbackSendGroupMsgReq {
  CommonCallbackReq CommonCallbackReq = 1;
  string GroupID = 2;
}
message CallbackSendSingleMsgReq {
  CommonCallbackReq CommonCallbackReq = 1;
  string RecvID = 2;
}

service msgcallbackService {
  rpc CallbackBeforeSendGroupMsg(CallbackSendGroupMsgReq) returns (CommonCallbackResp);
  rpc CallbackAfterSendGroupMsg(CallbackSendGroupMsgReq) returns (CommonCallbackResp);
  rpc CallbackBeforeSendSingleMsg(CallbackSendSingleMsgReq) returns (CommonCallbackResp);
  rpc CallbackAfterSendSingleMsg(CallbackSendSingleMsgReq) returns (CommonCallbackResp);
}
